--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Exercise</title>
   </head>
   <body>
-    <script src="./ex2.js"></script>
+    <script src="./pracEx3.js"></script>
   </body>
 </html>
